# mnara

./: README.md  pyproject.toml  requirements.txt
src/mnara/: __init__.py  config.py  distances.py  rdm.py
src/mnara/cli/: compute_rdms.py
src/mnara/pipeline/: __init__.py  rdm.py
